# YouTube-Second-Brain

./: main.py  pyproject.toml
pipeline/: classify.py  metadata.py  parse.py  transcript.py
