[project]
name = "youtube-second-brain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "openai-whisper>=20250625",
    "requests>=2.33.0",
    "youtube-transcript-api>=1.2.4",
    "yt-dlp>=2026.3.17",
]
